--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-hjgfjklvjnkf
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>
+	BTS///You Never Walk Alone
+</title>
+<style>
+	h1 {
+		font-family: "Brush Script MT", cursive;
+		font-size: 100px;
+		color: #65edb4;
+		text-align:center;
+	}	
+	h3 {
+		font-family:"Comic Sans MS", cursive, sans-serif;
+		color:black;
+		font-weight:normal;
+		text-align:center;
+		font-size: 25px;
+	}
+	.style {
+		font-family: Arial, Helvetica, sans-serif;
+		text-align: center;
+		color: #0b6be8;
+		font-size: 15px;
+		font-weight: bold;
+	}
+	.oblique {
+	font-family: "Times New Roman", Georgia, Serif;
+    font-style: oblique;
+	font-weight: bold;
+	text-align: center;
+	color: #ef1717;
+	font-size: 15px;
+}
+</style>
+</head>
+<body bgcolor="#f4ebf3">
+	<h1>You Never Walk Alone</h1>
+	<center><img src="bts-you-never-walk-alone-right-version.jpg" alt="rightversion" style="width:500px;height: 300px;"> <img src="left.jpg" alt="leftversion" style="width:500px;height: 300px;"></center>
+	<h3>Intro: Boy Meets Evil </h3>
+		<div><ol><p class="style"> Produced:</p> <p class="oblique">Pdogg, J-hope, Rap Monster</p>
+		<p class="style"> Rap Arrangement: </p> <p class="oblique">Pdogg, Supreme Boi </p></div>
+	<h3> Blood Sweat and Tears</h3>
+		<div><ol><p class="style"> Produced:</p> <p class="oblique">Pdogg, SUGA, Rap Monster, J-hope, "Hitman" bang</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook, Jimin </p>
+      <p class="style"> Vocal & Rap Arrangement: </p> <p class="oblique"> Pdogg </p></div>
+	<h3>Begin</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Tone Easterly, David Quinones, Rap Monster</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook</p></div>
+	</div>
+	<h3>Lie </h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> DOCSKIM, SUMIN, "Hitman" bang, Jimin, Pdogg</p>
+		<p class="style"> Vocal Arrangement: </p> <p class="oblique"> Pdogg, SUMIN, DOCSKIM</p></div>
+	<h3>Stigma</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Philtre, V, Slow Rabbit, "Hitman" bang</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> June, V</p></div>
+	<h3>First Love</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> MISS KAY, SUGA </p>
+		<p class="style"> Rap Arrangement: </p> <p class="oblique"> SUGA </p></div>
+	<h3>Reflection</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Slow Rabbit, Rap Monster</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Rap Monster</p>
+		<p class="style"> Rap Arrangement: </p> <p class="oblique"> Rap Monster</p></div>
+	<h3>MAMA</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Primary, Pdogg, J-hope</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> J-hope, June, Joy Malcolm, Phebe Edwards</p></div>
+	<h3>Awake</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Jin, J-hope, Slow Rabbit, June, Pdogg, "Hitman" bang</p>
+		<p class="style"> Vocal Arrangement: </p> <p class="oblique"> Slow Rabbit</p></div>
+	<h3>Lost</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Pdogg, Supreme Boi, Peter Ibsen,<br> Richard Rawson, Lee Paul Williams, June</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook</p></div>
+	<h3>Cypher pt 4</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, J-hope, SUGA, Pdogg, C. "Tricky", Spanker</p>
+		<p class="style"> Rap Arrangement: </p> <p class="oblique"> Rap Monster, Pdogg, Supreme Boi</p></div>
+	<h3>Am I wrong?</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Pdogg, Sam Klempner, James Reynolds, <br> Josh Wilkinson, Supreme Boi, ADORA</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook </p></div>
+	<h3>21st Century Girls</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Supreme Boi, Pdogg, "Hitman" bang</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook </p></div>
+	<h3>2!3! (Hoping For More Good Days)</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Slow Rabbit, Rap Monster, Pdogg, "Hitman" bang, J-hope, SUGA</p>
+		<p class="style"> Rap Arrangement: </p> <p class="oblique"> Rap Monster, J-hope, SUGA</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook</p></div>
+	<h3>Spring Day</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, SUGA, Pdogg, "Hitman" bang, ADORA</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook, Arlissa Rupert</p></div>
+	<h3>Not Today</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Supreme Boi, Pdogg, "Hitman" bang, June</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook, June</p></div>
+	<h3>Outro: Wings</h3>
+		<div><ol><p class="style"> Produced: </p> <p class="oblique"> Rap Monster, ADORA, SUGA, J-hope, Pdogg</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook, ADORA</p></div>
+	<h3>A supplementary story: You never walk alone</h3>
+		<div><ol> <p class="style"> Produced: </p> <p class="oblique"> Rap Monster, Supreme Boi, Pdogg, "Hitman" bang, SUGA, J-hope</p>
+		<p class="style"> Chorus: </p> <p class="oblique"> Jungkook</p></div>
+		<br><br><br>
+</body>
+</html>
+
